# envoy

./: .env.example  .gitignore  .session-notes  CHARTER.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.claude/: .coc-sync-marker  VERSION  operator-id  settings.json
.claude/rules/: autonomous-execution.md  framework-first.md  git.md  security.md
.claude/workflows/: redteam-round.mjs
.github/workflows/: tests.yml
envoy/: __init__.py  __main__.py
envoy/authorship/: __init__.py  bet12_emitter.py  novelty.py  posture_gate.py  score.py
envoy/boundary_conversation/: __init__.py  bet12_telemetry.py  envelope_assembler.py  errors.py  init_bootstrap.py  init_runtime.py  resume.py  runtime.py  script.py  signatures.py
envoy/budget/: __init__.py  anomaly_detector.py  errors.py  ledger_emitter.py  orchestrator.py  reset_scheduler.py  runtime_adapter.py  threshold_dispatcher.py  types.py
envoy/channels/: __init__.py  _discord_signer.py  _slack_signer.py  _telegram_signer.py  adapter.py  cli.py  discord.py  envelope.py  errors.py  slack.py  telegram.py  web.py
envoy/cli/: __init__.py  __main__.py  chat.py  connection.py  digest.py  grant.py  init.py  ledger.py  main.py  model.py  posture.py  runtime.py  shamir.py  version.py
envoy/connection_vault/: __init__.py  adapter.py  env_import.py  errors.py  schema.py
envoy/daily_digest/: __init__.py  aggregator.py  backfill.py  bootstrap.py  duress.py  engagement.py  errors.py  fanout.py  pause.py  payload.py  renderer.py  schedule_registry.py  scheduler.py  service.py
envoy/enterprise/: __init__.py  errors.py  schema.py  verifier.py
envoy/envelope/: __init__.py  canonical_bytes.py  compiler.py  errors.py  scope.py  template_resolver.py  types.py
envoy/foundation_ops/: __init__.py  errors.py  hpke.py  ohttp_server.py
envoy/grant_moment/: __init__.py  cascade_orchestrator.py  channel_handoff.py  errors.py  novelty.py  out_of_envelope.py  plan_suspension_bridge.py  resolution.py  runtime.py  signed_consent.py  state_machine.py
envoy/heartbeat/: __init__.py  client.py  errors.py  ohttp.py  payload.py  registry.py  signed_consent.py  star_prio.py
envoy/ledger/: __init__.py  bootstrap.py  canonical.py  errors.py  export.py  facade.py  hash_chain.py  head.py  keystore.py  lamport.py
envoy/model/: __init__.py  byom_picker.py  errors.py  response_filter.py  risk.py  router.py
envoy/registry/: __init__.py  errors.py  fv_resolver.py  library_app.py  steward_quorum.py  storage.py
envoy/runtime/: __init__.py  chat.py  contract_tier.py  dispatch_observation.py  envelope_check.py  errors.py  feature_flags.py  observed_state.py  observed_state_gate.py  protocol.py  runtime_attestation.py  runtime_picker.py  runtime_switch.py  selection.py  session.py  session_boundary.py
envoy/shamir/: __init__.py  commitments.py  distribution_checklist.py  errors.py  paper.py  recover.py  ritual.py  types.py
envoy/skill_ingest/: __init__.py  co_validator.py  comparison.py  envelope_md.py  errors.py  inference.py  permission_registry.py  publisher_signature.py  skill_md.py
envoy/trust/: __init__.py  errors.py  sqlite_perms.py  store.py  types.py  vault.py
scripts/maintenance/: fix-hardcoded-paths.py  fix-imports.py  refactor-pythoncode-to-functions.py
specs/: _index.md  a2a-messaging.md  acceptance-metrics.md  authorship-score.md  boundary-conversation.md  budget-tracker.md  channel-adapters.md  classification-policy.md  connection-vault.md  cross-domain-flows.md  daily-digest.md  data-model.md  distribution.md  enterprise-deployment.md  envelope-library.md  envelope-model.md  foundation-health-heartbeat.md  foundation-ops.md  grant-moment.md  independent-verifier.md  ledger-merge.md  ledger.md  model-adapter.md  monthly-trust-report.md  mvp-build-sequence.md  network-security.md  posture-ladder.md  remote-time-anchor.md  runtime-abstraction.md  session-runtime.md  session-state.md  shamir-recovery.md  shared-household.md  skill-ingest.md  sub-agent-delegation.md  threat-model.md  tool-output-sanitization.md  trust-lineage.md  trust-vault.md  ui-platform.md  (+1 more)
tests/: conftest.py
tests/conformance/: e1_e4_vectors.py  e5_e7_vectors.py  harness.py  n1_n3_vectors.py  n4_n6_vectors.py  test_e1_e4.py  test_e5_e7.py  test_harness_skeleton.py  test_n1_n3.py  test_n4_n6.py
tests/e2e/: __init__.py  test_daily_digest_morning_delivery.py  test_envoy_7_day_cross_channel_coherence.py  test_envoy_cli_packaging_acceptance.py  test_f8_ec7_per_channel_2x_baseline_parity.py  test_grant_moment_3_resolution_shapes_with_cascade.py  test_grant_moment_real_to_honeypot_latency_parity.py  test_session_continuity_5_channels.py
tests/helpers/: __init__.py  budget_harness.py  deterministic_llm_provider.py  edr_harness.py  grant_moment_harness.py
tests/integration/: __init__.py  test_cert_pin_mismatch.py  test_co_validator_100_benign_corpus.py  test_co_validator_3_adversarial_corpus.py  test_co_validator_six_steps.py  test_cross_principal_dual_signature.py  test_edr_dual_sign_required.py  test_edr_verifier_six_steps.py  test_envelope_library_offline_cache.py  test_envelope_library_tier_signatures.py  test_envelope_md_generator_field_complete.py  test_grant_moment_back_pressure.py  test_grant_moment_cross_channel_confirm_failed.py  test_grant_moment_dedup_store_fifo_eviction.py  test_grant_moment_friction_token_vocabulary.py  test_grant_moment_render_all_channels.py  test_grant_moment_state_machine.py  test_h03_primary_channel_binding.py  test_heartbeat_21_flag_payload.py  test_heartbeat_dp_client_side_before_split.py  test_heartbeat_dp_epsilon_budget_per_metric.py  test_heartbeat_k_anonymity_floor_100.py  test_heartbeat_l01_ritual_coupling_debounce.py  test_ohttp_freshest_config_selection.py  test_ohttp_key_config_expiry_iso.py  test_ohttp_key_config_quorum_input_error.py  test_ohttp_key_config_steward_signed.py  test_ohttp_key_registry_live_fetch.py  test_ohttp_relay_down_typed.py  test_ohttp_relay_ip_stripped.py  test_skill_md_parser_canonical_format.py  (+5 more)
workspaces/: README.md
(+541 files in other folders)
