[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Working package name; final legal mark pending Phase 00 trademark sweep (see DECISIONS §ADR-0002).
name = "envoy-agent"
version = "0.0.0"
description = "Autonomous AI where you set the boundaries. Terrene Foundation."
authors = [
    {name = "Terrene Foundation", email = "info@terrene.foundation"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    # Phase 01 runtime: pure-Python kailash per ADR-0001 phase-migration table.
    # The runtime is wired through the abstract `kailash-runtime` interface
    # (envoy/runtime/protocol.py); Phase 02 adds the Rust-backed binding via
    # the runtime adapter slot per `11-phase-02-handoff.md` T-11-04.
    # Apache 2.0; Foundation-stewarded; install via `pipx install envoy-agent`.
    "kailash[nexus,kaizen,dataflow,pact,shamir]>=2.13.4",
    # Trust Vault crypto (T-01-13) — AES-256-GCM via cryptography; Argon2id KDF
    # via argon2-cffi (m=2^17, t=3, p=1 per specs/trust-vault.md § Encryption).
    "cryptography>=44.0",
    "argon2-cffi>=23.0",
    # OS keychain wrapper (Connection Vault — shard 14)
    "keyring>=24.0",
    # CLI framework
    "click>=8.0",
    "rich>=13.0.0",
    # Channel adapter SDKs (shard 16) — bot-API trio (Telegram is LGPL-3.0+; see NOTICES)
    "python-telegram-bot>=21.0",
    "slack-sdk>=3.27",
    "discord.py>=2.3",
    # Scheduler (Daily Digest — shard 11)
    "apscheduler>=3.10",
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
]

[project.optional-dependencies]
ml = [
    # PyTorch - On Windows, install separately: pip install torch --index-url https://download.pytorch.org/whl/cu118
    "torch>=2.7.1",
]
dev = [
    # Testing (pytest>=7.2.0 removes vulnerable py dependency)
    "pytest>=7.2.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    # Linting & Formatting
    "black>=23.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    # Security & Pre-commit
    "detect-secrets>=1.5.0",
    "pre-commit>=4.2.0",
]

[project.urls]
# Final GitHub org pending Phase 00 namespace reservation.
"Homepage" = "https://terrene.foundation"
# "Source" and "Bug Tracker" to be filled in once the public GitHub repo is created.

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", ".*", "__pycache__*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
